# docs/swagger.json
@@ -46,6 +46,20 @@
                     {
                         "type": "string",
                         "format": "text",
+                        "description": "filter by title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "text",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "text",
                         "description": "filter by material (wood/metal)",
                         "name": "material",
                         "in": "query"
@@ -768,7 +782,13 @@
                         "$ref": "#/definitions/web_internal_models.Item"
                     }
                 },
+                "length": {
+                    "type": "integer"
+                },
                 "order_id": {
+                    "type": "integer"
+                },
+                "page_size": {
                     "type": "integer"
                 }
             }
